--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import "tailwindcss/preflight";
+@import "tailwindcss/utilities";
+@import "tailwindcss";
+
 body {
   font-family: "Inter", sans-serif;
   margin: 0;
